[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PushWave.gd" type="Script" id=1]
[ext_resource path="res://Scripts/WaveSprite.gd" type="Script" id=2]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.475694, 0.923611, 0.996528, 1 )
colors = PoolColorArray( 0, 0.67451, 0.407843, 0, 0, 1, 0.603922, 0.309804, 0, 1, 0.603922, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=4]
flags = 5
gradient = SubResource( 3 )
width = 128
height = 128
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.5, 1 )

[node name="PushWave" type="Node2D"]
scale = Vector2( 1.15, 1.15 )
script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="."]
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
